# RAAD

./: .flake8  .gitignore  .pylintrc  FILE  Makefile  README.md  anacondaPackages.txt  createExeWindows.py  environment_ubuntu-x86_64.yml  environment_win-x86_64.yml  requirements.txt
.raadProfile/: .bashrc  .condarc
data/: README.md  gui.dump  queryTesting.txt
data/reportGenerator_unitTestDir/: reference.tex
dox/: Makefile  README.md
dox/docs/architecture/: Architecture_Feature_Template_v1.docx
dox/docs/images/: RAAD_Repo_Overview.vsdx
dox/docs/presentations/: RAAD_CompilersOverview.pptx  RAAD_Proposal_Datacontrol.pptx
dox/source/: API_Direction.rst  Accelerating_Code_Velocity.rst  Anaconda.rst  Background_Time_Series.rst  Data_Control.rst  Fault_Analysis.rst  Introduction.rst  Mentoring.rst  NVMe-CLI.rst  NVMe-CLI_Debug.rst  NVMe_Telemetry.rst  RAAD.rst  RAAD_Getting_Started.rst  RAAD_Workloads.rst  Security_Detection.rst  Server.rst  conf.py  findClasses.py  index.rst
scripts/: anacondaPack.sh  anacondaPackageList.sh  anacondaRecreate.sh  anacondaUnpack.sh  clean.sh  convert_Py2-Py3.sh  createExe.sh  createIgnorebySize.sh  installer.sh
src/: __init__.py  condaEnvironment.py  config.py  installer.py  main.py  setup.py
src/_dev_tools/: codeClean.py
src/mpr/autoperf/: Dockerfile  Makefile  README.md  environment.yml  environment_centos7.yml  environment_ubuntu.yml  main.py  requirements.txt  setup.py
src/mpr/autoperf/docs/: Makefile
src/mpr/controlflag/: CMakeLists.txt  ControlFlag_Settings.cfg  README.md
src/mpr/controlflag/github/: collect_repo_urls.py  deduplicate.py  download_repos.py
src/mpr/controlflag/quick_start/: test1.sh
src/mpr/controlflag/scripts/: mine_patterns.sh  py3API.py  scan_for_anomalies.sh
src/mpr/controlflag/src/: CMakeLists.txt  autocorrect.cpp  cf_client.cpp  cf_file_scanner.cpp  cf_server.cpp  common_util.cpp  common_util.h  parser.h  result_processing.cpp  suffix_tree.cpp  suffix_tree.h  train_and_scan_util.cpp  train_and_scan_util.h  tree.h  tree_abstraction.cpp  tree_abstraction.h  trie.cpp  trie.h
src/mpr/controlflag/src/tree-sitter/: CMakeLists.txt
src/mpr/misim/: README.md
src/software/: __init__.py  autoModuleAPI.py  debug.py  estimationROI.py  getOptions.py  gui.py  guiCommon.py  guiDeveloper.py  guiLayouts.py  guiOneShot.py  guiTests.py  threadModuleAPI.py  userConfigurationProfile.py  utilsCommon.py
src/software/DP/: __init__.py  flat2NestedDict.py  preprocessingAPI.py
src/software/JIRA/: How-to.txt  Readme.md  analysisGuide.py  classCommonReports.py  classGetJiraIssues.py  classHtmlGen.py  classJiraIssues.py  classJiraIssuesList.py  classSupportFiles.py  commit_PROA.txt  commit_PROD.txt  executeJiraMining.py  getJiraFieldDescriptions.py  jiraEmbedding.py  jiraSimAnalysis.py  milestones.txt  review_retro_plan.py  sprint_graph.py  team_progress.py  updateSnapshot.py  wsr.py
src/software/MEP/: README.md  __init__.py  loadAndProbeDrive.py  mediaErrorGUI.py  mediaErrorPredictor.py
src/software/TSV/: DefragHistoryGUI.py  DefragHistoryGrapher.py  README.md  __init__.py  configToText.py  formatTSFiles.py  generateTSBinaries.py  genericObjectGUI.py  loadAndProbeSystem.py  renameBinaryFiles.py  utilityTSV.py  visualizeTS.py
src/software/access/: DriveInfo.py  __init__.py  binaryInterface.py
src/software/autoAI/: NNStateBasedProcessing.py  README.md  __init__.py  mediaPredictionRNN.py  nlogPrediction.py  telemetryRNN.py  transformCSV.py
src/software/axon/: __init__.py  axonInterface.py  axonMeta.py  axonProfile.py  packageInterface.py
src/software/container/: __init__.py  basicTypes.py  genericObjects.py  indirection.py  interactiveMatrixProfileVer3.py  native.py  simularityProfile.py
src/software/cpt/: GetMPDistances.py  PreprocessData.py  PreprocessTimeSeries.py  __init__.py  runModel.py  testtf.py  tryTFonData.py
src/software/dAMP/: README.md  __init__.py  gatherMeta.py  iBOGA.py  iSOM.py  reportGenerator.py  triage.py
src/software/datacontrol/: README.txt  __init__.py  dataControlGen.py  dataControlGenMain.py
src/software/decode/: autoParser_v2.py  autoParser_v3.py  baseTags.py  ctypeAutoGen.py  findSympy_v1.py  findTags.py  run_ADP.bat  run_CDR.bat  task_analysis.py
src/software/mp/: __init__.py  annotation_vector.py  discords.py  distanceProfile.py  fluss.py  matrixProfile.py  motifs.py  order.py  regimes.py  scrimp.py  utils.py
src/software/parse/: AutoGenParallel.py  README.md  __init__.py  autoObjects.py  autoParseIdentify.py  autoParseInput.py  bufdata.py  bufdict.py  collectStream.py  ctypeAutoGen.py  ctypeDict_test.py  headerTelemetry.py  intelObjectIdList.py  intelTelemetryDataObject.py  intelVUTelemetry.py  intelVUTelemetryReason.py  output_log.py  pacmanIC.py  parseTelemetryBin.py  parseUnitTest.py  parserDictionaryGen.py  parserSrcUtil.py  parserTwidlGen.py  parserXmlGen.py  structdefParser.py  telemetryCmd.py  telemetry_drive.py  telemetry_util.py  testTelemetryPull.py  testall.py  varType.py
src/software/probeTrace/: ArbordalePlus.gmb  ArbordalePlus.py  ArbordalePlus.rc  ArbordalePlus_a0_trace.mbs  probe_options_srp.ghpcfg
(+80 files in other folders)
